--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -25,8 +25,10 @@ body {
     font-family: Garamond;
 }
 pre {
-    white-space: pre-wrap;
-    word-wrap: break-word;
+    // white-space: pre-wrap;
+    // word-wrap: break-word;
+    overflow-x:auto;
+    //overflow-x:scroll;
 }
 @import "public";
 @import "page-home";
