--- a/app/sass/page-post.scss
+++ b/app/sass/page-post.scss
@@ -6,9 +6,6 @@
             align-items: baseline;
             justify-content: space-evenly;
             .post{
-                display:flex;
-                flex-direction: column;
-                align-items: flex-start;
                 width:40%;
                 padding-top:1em;
                 .title{
@@ -27,6 +24,7 @@
 
                 }
                 .footer{
+                    display: none;
                     text-align: center;
                     padding: 0.4em 3em;
                     background-color: #1f729acc;
