--- a/app/sass/page-home.scss
+++ b/app/sass/page-home.scss
@@ -16,11 +16,12 @@
                     img{
                         max-width:100%;
                     }
-                    .time,.tag {
+                    .time,.tag,.top{
                         font-size: 12px;
                         color: #aaa;
                         display: flex;
                         align-items:center;
+                        justify-content: center;
                         font-family: "Roboto-Regular";
 
                         img{
@@ -32,11 +33,13 @@
                         margin-bottom: 1.5em;
                     }
                     .title {
-                        font-size: 34px;
+                        font-size: 28px;
                         display: flex;
                         align-items: baseline;
+                        justify-content: center;
                         font-weight: 700;
                         flex-wrap: wrap;
+
                         a{
                             line-height: 1.7em;
                             .pre{
@@ -44,6 +47,9 @@
                                 color:#d07474e0;
                                 font-family: "Garamond";
                             }
+                        }
+                        span{
+                            font-size:12px;
                         }
                     }
 
@@ -125,24 +131,20 @@
                 margin-bottom: 3em;
                 border-bottom: 2px dashed #eee;
                 .title {
-                    font-size: 34px;
+                    font-size: 28px;
                     display: flex;
                     align-items: baseline;
                     font-weight: 700;
                     flex-wrap: wrap;
                     line-height: 1.4em;
-                    .pre{
-                        padding-right: 10px;
-                        color:#d07474e0;
-                    }
+                    
                 }
-                .time,.tag {
+                .time,.tag,.top{
                     font-size: 12px;
                     color: #aaa;
                     display: flex;
                     align-items:center;
                     font-family: "Roboto-Regular";
-
 
                     img{
                         height:16px;
